helm/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-demo
                port:
                  number: 80
